[fix] user edit page and [add] instructors controller

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -7,8 +7,14 @@ ja:
         password: "パスワード"
         password_confirmation: "確認用パスワード"
         remember_me: "ログインを記憶"
+      instructor:
+        current_password: "現在のパスワード"
+        email: "メールアドレス"
+        password: "パスワード"
+        password_confirmation: "確認用パスワード"
     models:
       user: "ユーザ"
+      instructor: "インストラクター"
   devise:
     confirmations:
       new:
